Support for Buffalo WZR-HP-AG300H

--- a/bsp/ar71xx/.config
+++ b/bsp/ar71xx/.config
@@ -4,6 +4,8 @@
 CONFIG_TARGET_ar71xx=y
 CONFIG_TARGET_ar71xx_generic=y
 CONFIG_TARGET_MULTI_PROFILE=y
+CONFIG_TARGET_DEVICE_ar71xx_generic_DEVICE_WZRHPAG300H=y
+CONFIG_TARGET_DEVICE_PACKAGES_ar71xx_generic_DEVICE_WZRHPAG300H=""
 CONFIG_TARGET_DEVICE_ar71xx_generic_DEVICE_gl-ar150=y
 CONFIG_TARGET_DEVICE_PACKAGES_ar71xx_generic_DEVICE_gl-ar150=""
 CONFIG_TARGET_DEVICE_ar71xx_generic_DEVICE_archer-c25-v1=y
